--- a/Plot/output_tables.tex
+++ b/Plot/output_tables.tex
@@ -11,12 +11,14 @@
 Algorithm & Fit Time & Predict Time & AUPR-IN & AUPR-OUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
 \midrule
 OneClassForest & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
+OneClassForestwoBootstrap & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
 IsolationForest & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
 NeuronalNetworkLoss & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
 NeuronalNetwork & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
 OneClassSVN & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
 EnergyFlowClassifier & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
 DistanceLOF & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
+LocalOutlierFactor & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
 Random & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
 \bottomrule
 \end{tabular}
