--- a/Plot/output_tables.tex
+++ b/Plot/output_tables.tex
@@ -1,25 +1,600 @@
 \documentclass{article}
 \usepackage{booktabs}
 \begin{document}
-\section*{Results for dataset: TrainDay0_TestDay1234}
+\section*{Results for dataset: TrainDay0123_TestDay4, flows}
 \begin{table}[h!]
 \centering
-\caption{Results for dataset \texttt{TrainDay0_TestDay1234}}
-\label{tab:trainday0testday1234}
+\caption{Results for dataset \texttt{TrainDay0123_TestDay4}, flow samples: flows}
+\label{tab:trainday0123testday4_flows}
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-Algorithm & Fit Time & Predict Time & AUPR-IN & AUPR-OUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
 \midrule
-OneClassForest & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
-OneClassForestwoBootstrap & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
-IsolationForest & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
-NeuronalNetworkLoss & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
-NeuronalNetwork & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
-OneClassSVN & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
-EnergyFlowClassifier & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
-DistanceLOF & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
-LocalOutlierFactor & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
-Random & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
+OneClassForest & - & - & - & - & - & - & - & - & - \\
+OneClassForestwoBootstrap & 0h 0m 28s & 0h 0m 1s & 0.8127 & 0.7960 & 0.6377 & 1 & 1 & 1 & 2 \\
+IsolationForest & 0h 4m 58s & 0h 1m 27s & 0.9848 & 0.9489 & 0.9764 & 2 & 4 & 5 & 7 \\
+NeuronalNetworkLoss & 1h 43m 13s & 0h 0m 3s & 0.9122 & 0.7252 & 0.8524 & 1 & 4 & 5 & 8 \\
+NeuronalNetwork & 1h 9m 4s & 0h 0m 0s & 0.5805 & 0.4098 & 0.4301 & 2 & 4 & 5 & 8 \\
+OneClassSVN & 0h 13m 28s & 0h 0m 58s & 0.9015 & 0.7060 & 0.7351 & 1 & 2 & 3 & 4 \\
+EnergyFlowClassifier & 1h 22m 59s & 0h 0m 29s & 0.9702 & 0.9707 & 0.9712 & 1 & 4 & 5 & 8 \\
+DistanceLOF & 3h 47m 48s & 1h 23m 12s & 0.8698 & 0.7190 & 0.8024 & 1 & 2 & 2 & 3 \\
+LocalOutlierFactor & 1h 23m 9s & 0h 31m 49s & 0.5934 & 0.5203 & 0.5123 & 14 & 2 & 3 & 4 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.5490 & 0.4522 & 0.4993 & 5 & 4 & 5 & 8 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay012_TestDay34, flows}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay012_TestDay34}, flow samples: flows}
+\label{tab:trainday012testday34_flows}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 57m 3s & 0h 0m 1s & 0.8293 & 0.4404 & 0.5047 & 2 & 3 & 4 & 6 \\
+OneClassForestwoBootstrap & 0h 0m 26s & 0h 0m 1s & 0.6784 & 0.6273 & 0.6237 & 30 & 2 & 2 & 3 \\
+IsolationForest & 0h 3m 48s & 0h 1m 38s & 0.9951 & 0.9536 & 0.9897 & 8 & 5 & 6 & 9 \\
+NeuronalNetworkLoss & 1h 19m 40s & 0h 0m 5s & 0.9378 & 0.7314 & 0.8701 & 1 & 5 & 7 & 10 \\
+NeuronalNetwork & 0h 57m 36s & 0h 0m 1s & 0.5578 & 0.2115 & 0.1778 & 186 & 10 & 12 & 19 \\
+OneClassSVN & 0h 6m 9s & 0h 1m 12s & 0.9425 & 0.7082 & 0.7926 & 1 & 3 & 4 & 5 \\
+EnergyFlowClassifier & 0h 58m 5s & 0h 0m 39s & 0.9815 & 0.9509 & 0.9699 & 1 & 6 & 7 & 11 \\
+DistanceLOF & 1h 44m 7s & 2h 6m 6s & 0.9001 & 0.6212 & 0.7950 & 1 & 2 & 2 & 3 \\
+LocalOutlierFactor & 0h 49m 19s & 0h 42m 45s & 0.7221 & 0.4179 & 0.5474 & 15 & 3 & 4 & 5 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.6562 & 0.3448 & 0.4994 & 3 & 6 & 8 & 12 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay01_TestDay234, flows}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay01_TestDay234}, flow samples: flows}
+\label{tab:trainday01testday234_flows}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 26m 9s & 0h 0m 1s & 0.8260 & 0.4650 & 0.5054 & 13 & 3 & 4 & 5 \\
+OneClassForestwoBootstrap & 0h 0m 13s & 0h 0m 2s & 0.9333 & 0.7872 & 0.8633 & 26 & 2 & 2 & 3 \\
+IsolationForest & 0h 2m 19s & 0h 1m 37s & 0.9890 & 0.9551 & 0.9833 & 7 & 5 & 6 & 9 \\
+NeuronalNetworkLoss & 0h 48m 11s & 0h 0m 10s & 0.9162 & 0.6239 & 0.8245 & 1 & 6 & 7 & 11 \\
+NeuronalNetwork & 0h 39m 41s & 0h 0m 1s & 0.5176 & 0.2279 & 0.2028 & 19 & 7 & 9 & 13 \\
+OneClassSVN & 0h 7m 3s & 0h 1m 30s & 0.9106 & 0.6590 & 0.7069 & 1 & 3 & 3 & 5 \\
+EnergyFlowClassifier & 0h 34m 41s & 0h 0m 41s & 0.7438 & 0.6526 & 0.6663 & 1 & 6 & 7 & 11 \\
+DistanceLOF & 0h 25m 12s & 1h 57m 2s & 0.8931 & 0.6274 & 0.7951 & 1 & 1 & 2 & 2 \\
+LocalOutlierFactor & 0h 22m 6s & 0h 40m 56s & 0.7697 & 0.4131 & 0.6171 & 139 & 5 & 7 & 10 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.6496 & 0.3530 & 0.5002 & 1 & 6 & 7 & 11 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_DDos, flows}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_DDos}, flow samples: flows}
+\label{tab:trainday0ddos_flows}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 24s & 0h 0m 0s & 0.6395 & 0.3604 & 0.5000 & 29 & 3 & 4 & 6 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.7257 & 0.8996 & 0.7983 & 24 & 1 & 2 & 2 \\
+IsolationForest & 0h 1m 13s & 0h 0m 3s & 0.9709 & 0.9791 & 0.9811 & 2 & 2 & 3 & 4 \\
+NeuronalNetworkLoss & 0h 25m 14s & 0h 0m 0s & 0.8773 & 0.9271 & 0.8965 & 1 & 2 & 3 & 4 \\
+NeuronalNetwork & - & - & - & - & - & - & - & - & - \\
+OneClassSVN & 0h 1m 34s & 0h 0m 5s & 0.8816 & 0.8459 & 0.8046 & 1 & 2 & 2 & 3 \\
+EnergyFlowClassifier & 0h 17m 51s & 0h 0m 1s & 0.4399 & 0.7081 & 0.5631 & 43 & 2 & 3 & 4 \\
+DistanceLOF & 0h 1m 49s & 0h 0m 28s & 0.4991 & 0.7934 & 0.6470 & 5 & 2 & 2 & 4 \\
+LocalOutlierFactor & 0h 6m 16s & 0h 2m 12s & 0.3063 & 0.7248 & 0.4868 & 32 & 2 & 3 & 4 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.3128 & 0.6975 & 0.4984 & 4 & 2 & 3 & 4 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_Dos, flows}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_Dos}, flow samples: flows}
+\label{tab:trainday0dos_flows}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.7053 & 0.2947 & 0.5000 & 20 & 4 & 5 & 7 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.5559 & 0.6076 & 0.5162 & 9 & 3 & 3 & 5 \\
+IsolationForest & 0h 1m 14s & 0h 0m 7s & 0.9455 & 0.9879 & 0.9776 & 1 & 3 & 3 & 5 \\
+NeuronalNetworkLoss & 0h 25m 16s & 0h 0m 1s & 0.8540 & 0.8103 & 0.8336 & 1 & 3 & 4 & 5 \\
+NeuronalNetwork & 0h 19m 30s & 0h 0m 0s & 0.7024 & 0.7104 & 0.5715 & 3 & 3 & 4 & 6 \\
+OneClassSVN & 0h 1m 34s & 0h 0m 10s & 0.8682 & 0.9083 & 0.8846 & 1 & 2 & 2 & 3 \\
+EnergyFlowClassifier & 0h 17m 48s & 0h 0m 3s & 0.5541 & 0.5987 & 0.5498 & 132 & 3 & 4 & 6 \\
+DistanceLOF & 0h 1m 48s & 0h 1m 37s & 0.6958 & 0.8010 & 0.7739 & 1 & 2 & 2 & 3 \\
+LocalOutlierFactor & 0h 6m 16s & 0h 4m 12s & 0.4919 & 0.5912 & 0.4954 & 123 & 3 & 4 & 6 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.4095 & 0.5961 & 0.5010 & 2 & 3 & 4 & 6 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_FTPPatator, flows}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_FTPPatator}, flow samples: flows}
+\label{tab:trainday0ftppatator_flows}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 19s & 0h 0m 0s & 0.9835 & 0.0165 & 0.5000 & 190 & 85 & 110 & 169 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9976 & 0.1697 & 0.9316 & 117 & 11 & 14 & 21 \\
+IsolationForest & 0h 1m 13s & 0h 0m 3s & 0.9724 & 0.0274 & 0.4594 & 953 & 70 & 91 & 139 \\
+NeuronalNetworkLoss & 0h 25m 19s & 0h 0m 1s & 0.9917 & 0.0650 & 0.7812 & 2221 & 65 & 84 & 129 \\
+NeuronalNetwork & 0h 19m 32s & 0h 0m 0s & 0.9835 & 0.0165 & 0.5000 & 187 & 69 & 90 & 138 \\
+OneClassSVN & 0h 1m 34s & 0h 0m 4s & 0.9875 & 0.0607 & 0.7227 & 442 & 58 & 75 & 115 \\
+EnergyFlowClassifier & 0h 17m 55s & 0h 0m 1s & 0.9925 & 0.2905 & 0.8554 & 10 & 66 & 85 & 131 \\
+DistanceLOF & 0h 1m 49s & 0h 0m 19s & 0.9739 & 0.0315 & 0.5044 & 35251 & 201 & 201 & 201 \\
+LocalOutlierFactor & 0h 6m 16s & 0h 1m 59s & 0.9807 & 0.0376 & 0.5973 & 144 & 81 & 105 & 161 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.9735 & 0.0298 & 0.5037 & 495 & 69 & 90 & 137 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_Heartbleed, flows}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_Heartbleed}, flow samples: flows}
+\label{tab:trainday0heartbleed_flows}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.9999 & 0.0000 & 0.5000 & 1338 & 201 & 201 & 201 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9999 & 0.0000 & 0.9903 & 113 & 201 & 201 & 201 \\
+IsolationForest & 0h 1m 13s & 0h 0m 0s & 0.9999 & 0.0001 & 0.6224 & 2 & 201 & 201 & 201 \\
+NeuronalNetworkLoss & 0h 25m 19s & 0h 0m 0s & 0.9999 & 0.0001 & 0.6224 & 7 & 201 & 201 & 201 \\
+NeuronalNetwork & 0h 19m 55s & 0h 0m 0s & 1.0000 & 0.0000 & 0.0000 & 1333 & 201 & 201 & 201 \\
+OneClassSVN & 0h 1m 34s & 0h 0m 0s & 0.9999 & 0.0001 & 0.6224 & 13 & 201 & 201 & 201 \\
+EnergyFlowClassifier & 0h 18m 4s & 0h 0m 0s & 0.9997 & 0.0000 & 0.3724 & 17217 & 201 & 201 & 201 \\
+DistanceLOF & 0h 1m 49s & 0h 0m 1s & 1.0000 & 0.0000 & 0.0000 & 1 & 2 & 2 & 3 \\
+LocalOutlierFactor & 0h 6m 15s & 0h 0m 17s & 0.9999 & 0.0000 & 0.5051 & 10330 & 201 & 201 & 201 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.9996 & 0.0000 & 0.4847 & 8786 & 201 & 201 & 201 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_Infiltration, flows}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_Infiltration}, flow samples: flows}
+\label{tab:trainday0infiltration_flows}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.7988 & 0.4826 & 0.5459 & 5 & 3 & 3 & 5 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9560 & 0.7825 & 0.9125 & 2 & 2 & 3 & 4 \\
+IsolationForest & 0h 1m 13s & 0h 0m 3s & 0.9894 & 0.9162 & 0.9783 & 1 & 4 & 5 & 8 \\
+NeuronalNetworkLoss & 0h 25m 24s & 0h 0m 0s & 0.8563 & 0.5798 & 0.7410 & 1 & 5 & 6 & 9 \\
+NeuronalNetwork & 0h 19m 39s & 0h 0m 0s & 0.6830 & 0.3058 & 0.3943 & 2 & 5 & 6 & 10 \\
+OneClassSVN & 0h 1m 34s & 0h 0m 4s & 0.9373 & 0.8383 & 0.9066 & 48 & 3 & 4 & 6 \\
+EnergyFlowClassifier & 0h 18m 0s & 0h 0m 1s & 0.9516 & 0.8735 & 0.9275 & 1 & 5 & 6 & 9 \\
+DistanceLOF & 0h 1m 49s & 0h 0m 24s & 0.7849 & 0.5801 & 0.7038 & 1 & 2 & 2 & 3 \\
+LocalOutlierFactor & 0h 6m 16s & 0h 2m 0s & 0.6113 & 0.3672 & 0.4791 & 32 & 6 & 8 & 11 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.5895 & 0.4192 & 0.5015 & 1 & 5 & 6 & 10 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_PortScan, flows}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_PortScan}, flow samples: flows}
+\label{tab:trainday0portscan_flows}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 20s & 0h 0m 0s & 0.6150 & 0.3850 & 0.5000 & 2 & 2 & 3 & 4 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9512 & 0.9804 & 0.9654 & 1 & 1 & 1 & 2 \\
+IsolationForest & 0h 1m 14s & 0h 0m 2s & 0.9849 & 0.9836 & 0.9866 & 2 & 2 & 2 & 3 \\
+NeuronalNetworkLoss & 0h 25m 23s & 0h 0m 1s & 0.7616 & 0.8201 & 0.7543 & 101 & 2 & 2 & 4 \\
+NeuronalNetwork & 0h 19m 38s & 0h 0m 0s & 0.6150 & 0.3850 & 0.5000 & 2 & 2 & 3 & 4 \\
+OneClassSVN & 0h 1m 34s & 0h 0m 4s & 0.6999 & 0.9398 & 0.8626 & 1 & 2 & 2 & 3 \\
+EnergyFlowClassifier & 0h 17m 56s & 0h 0m 1s & 0.9265 & 0.9881 & 0.9668 & 1 & 2 & 2 & 4 \\
+DistanceLOF & 0h 1m 49s & 0h 0m 22s & 0.4372 & 0.8496 & 0.6771 & 1 & 1 & 2 & 2 \\
+LocalOutlierFactor & 0h 6m 14s & 0h 1m 52s & 0.2218 & 0.6846 & 0.4066 & 1230 & 4 & 5 & 8 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.2228 & 0.7842 & 0.5013 & 1 & 2 & 3 & 4 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_SSHPatator, flows}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_SSHPatator}, flow samples: flows}
+\label{tab:trainday0sshpatator_flows}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 22s & 0h 0m 0s & 0.9864 & 0.0136 & 0.5000 & 3708 & 142 & 184 & 201 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9858 & 0.0137 & 0.5032 & 35 & 50 & 65 & 100 \\
+IsolationForest & 0h 1m 13s & 0h 0m 2s & 0.9505 & 0.0165 & 0.2512 & 284 & 86 & 112 & 172 \\
+NeuronalNetworkLoss & 0h 25m 22s & 0h 0m 0s & 0.9914 & 0.0448 & 0.7322 & 2176 & 79 & 103 & 158 \\
+NeuronalNetwork & 0h 19m 38s & 0h 0m 0s & 0.9900 & 0.0493 & 0.7206 & 3703 & 84 & 109 & 167 \\
+OneClassSVN & 0h 1m 35s & 0h 0m 4s & 0.9872 & 0.0389 & 0.6693 & 496 & 74 & 97 & 148 \\
+EnergyFlowClassifier & 0h 17m 52s & 0h 0m 1s & 0.9931 & 0.0557 & 0.7845 & 8 & 82 & 107 & 164 \\
+DistanceLOF & 0h 1m 48s & 0h 0m 17s & 0.9835 & 0.0290 & 0.5606 & 34795 & 201 & 201 & 201 \\
+LocalOutlierFactor & 0h 6m 14s & 0h 1m 49s & 0.9784 & 0.0233 & 0.4771 & 8662 & 201 & 201 & 201 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.9790 & 0.0244 & 0.5005 & 2357 & 84 & 109 & 167 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_TestBotnet, flows}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_TestBotnet}, flow samples: flows}
+\label{tab:trainday0testbotnet_flows}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 24s & 0h 0m 0s & 0.9952 & 0.0048 & 0.5000 & 797 & 201 & 201 & 201 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9948 & 0.0101 & 0.5099 & 66 & 201 & 201 & 201 \\
+IsolationForest & 0h 1m 14s & 0h 0m 2s & 0.9981 & 0.1343 & 0.8387 & 1 & 201 & 201 & 201 \\
+NeuronalNetworkLoss & 0h 25m 25s & 0h 0m 0s & 0.9975 & 0.0230 & 0.7746 & 1 & 201 & 201 & 201 \\
+NeuronalNetwork & 0h 19m 34s & 0h 0m 0s & 0.9952 & 0.0048 & 0.5000 & 711 & 201 & 201 & 201 \\
+OneClassSVN & 0h 1m 34s & 0h 0m 4s & 0.9976 & 0.0811 & 0.8253 & 1 & 157 & 201 & 201 \\
+EnergyFlowClassifier & 0h 17m 54s & 0h 0m 1s & 0.9919 & 0.0213 & 0.6275 & 16 & 201 & 201 & 201 \\
+DistanceLOF & 0h 1m 48s & 0h 0m 17s & 0.9862 & 0.0060 & 0.2861 & 34213 & 201 & 201 & 201 \\
+LocalOutlierFactor & 0h 6m 15s & 0h 1m 46s & 0.9881 & 0.0070 & 0.3867 & 8 & 201 & 201 & 201 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.9900 & 0.0091 & 0.4905 & 320 & 201 & 201 & 201 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_TestDay1234, flows}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_TestDay1234}, flow samples: flows}
+\label{tab:trainday0testday1234_flows}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 20s & 0h 0m 0s & 0.8569 & 0.1431 & 0.5000 & 9 & 7 & 9 & 14 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 1s & 0.9260 & 0.6684 & 0.8131 & 253 & 2 & 3 & 4 \\
+IsolationForest & 0h 1m 13s & 0h 0m 47s & 0.9867 & 0.9464 & 0.9792 & 28 & 6 & 8 & 11 \\
+NeuronalNetworkLoss & 0h 24m 55s & 0h 0m 12s & 0.9387 & 0.6214 & 0.8406 & 1 & 7 & 9 & 13 \\
+NeuronalNetwork & 0h 20m 20s & 0h 0m 2s & 0.8588 & 0.4099 & 0.4895 & 1 & 2 & 2 & 3 \\
+OneClassSVN & 0h 1m 34s & 0h 1m 2s & 0.9591 & 0.8124 & 0.8831 & 1 & 3 & 4 & 6 \\
+EnergyFlowClassifier & 0h 17m 46s & 0h 0m 23s & 0.8207 & 0.6129 & 0.6950 & 1 & 7 & 9 & 14 \\
+DistanceLOF & 0h 1m 48s & 0h 41m 11s & 0.9212 & 0.5708 & 0.8038 & 1 & 2 & 2 & 3 \\
+LocalOutlierFactor & 0h 6m 11s & 0h 27m 2s & 0.7779 & 0.3225 & 0.5370 & 321 & 4 & 6 & 8 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.7114 & 0.2895 & 0.4991 & 3 & 7 & 9 & 14 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_Web, flows}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_Web}, flow samples: flows}
+\label{tab:trainday0web_flows}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.9850 & 0.0150 & 0.5000 & 4305 & 121 & 158 & 201 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9818 & 0.0305 & 0.5404 & 150 & 72 & 93 & 143 \\
+IsolationForest & 0h 1m 14s & 0h 0m 1s & 0.9972 & 0.1544 & 0.9162 & 12 & 71 & 92 & 142 \\
+NeuronalNetworkLoss & 0h 25m 25s & 0h 0m 0s & 0.9927 & 0.0641 & 0.7922 & 503 & 72 & 94 & 143 \\
+NeuronalNetwork & - & - & - & - & - & - & - & - & - \\
+OneClassSVN & 0h 1m 34s & 0h 0m 2s & 0.9882 & 0.0513 & 0.7130 & 37 & 61 & 80 & 122 \\
+EnergyFlowClassifier & 0h 17m 56s & 0h 0m 1s & 0.9768 & 0.0306 & 0.5437 & 2319 & 76 & 98 & 151 \\
+DistanceLOF & 0h 1m 49s & 0h 0m 8s & 0.9594 & 0.0198 & 0.3121 & 22634 & 201 & 201 & 201 \\
+LocalOutlierFactor & 0h 6m 17s & 0h 1m 10s & 0.9726 & 0.0264 & 0.4787 & 87 & 107 & 140 & 201 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.9723 & 0.0273 & 0.4946 & 418 & 77 & 100 & 153 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0123_TestDay4, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0123_TestDay4}, flow samples: samples}
+\label{tab:trainday0123testday4_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & - & - & - & - & - & - & - & - & - \\
+OneClassForestwoBootstrap & 0h 0m 28s & 0h 0m 1s & 0.8442 & 0.7219 & 0.5901 & 1 & 1 & 1 & 2 \\
+IsolationForest & 0h 4m 58s & 0h 1m 27s & 0.9897 & 0.9344 & 0.9783 & 3 & 5 & 6 & 9 \\
+NeuronalNetworkLoss & 1h 43m 13s & 0h 0m 3s & 0.8721 & 0.5110 & 0.7449 & 1 & 6 & 7 & 11 \\
+NeuronalNetwork & 1h 9m 4s & 0h 0m 0s & 0.6379 & 0.3006 & 0.3895 & 2 & 6 & 7 & 11 \\
+OneClassSVN & 0h 13m 28s & 0h 0m 58s & 0.9407 & 0.4766 & 0.5196 & 1 & 3 & 3 & 5 \\
+EnergyFlowClassifier & 1h 22m 59s & 0h 0m 29s & 0.9664 & 0.9288 & 0.9495 & 1 & 5 & 7 & 10 \\
+DistanceLOF & 3h 47m 48s & 1h 23m 12s & 0.9037 & 0.6473 & 0.8151 & 1 & 3 & 3 & 5 \\
+LocalOutlierFactor & 1h 23m 9s & 0h 31m 49s & 0.6694 & 0.3875 & 0.5164 & 13 & 4 & 5 & 7 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.6468 & 0.3544 & 0.4995 & 1 & 6 & 7 & 11 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay012_TestDay34, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay012_TestDay34}, flow samples: samples}
+\label{tab:trainday012testday34_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 57m 3s & 0h 0m 1s & 0.8791 & 0.1209 & 0.5000 & 2 & 5 & 6 & 9 \\
+OneClassForestwoBootstrap & 0h 0m 26s & 0h 0m 1s & 0.7878 & 0.4464 & 0.5270 & 60 & 2 & 2 & 3 \\
+IsolationForest & 0h 3m 48s & 0h 1m 38s & 0.9944 & 0.9279 & 0.9840 & 16 & 7 & 9 & 14 \\
+NeuronalNetworkLoss & 1h 19m 40s & 0h 0m 5s & 0.9347 & 0.6345 & 0.8284 & 1 & 8 & 10 & 16 \\
+NeuronalNetwork & 0h 57m 36s & 0h 0m 1s & 0.6627 & 0.1416 & 0.1715 & 307 & 13 & 16 & 25 \\
+OneClassSVN & 0h 6m 9s & 0h 1m 12s & 0.9660 & 0.5012 & 0.6031 & 1 & 3 & 4 & 6 \\
+EnergyFlowClassifier & 0h 58m 5s & 0h 0m 39s & 0.9762 & 0.8692 & 0.9393 & 1 & 8 & 11 & 16 \\
+DistanceLOF & 1h 44m 7s & 2h 6m 6s & 0.9356 & 0.5115 & 0.8071 & 1 & 2 & 3 & 4 \\
+LocalOutlierFactor & 0h 49m 19s & 0h 42m 45s & 0.8046 & 0.2941 & 0.5800 & 35 & 5 & 7 & 10 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.7588 & 0.2413 & 0.4992 & 2 & 9 & 11 & 17 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay01_TestDay234, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay01_TestDay234}, flow samples: samples}
+\label{tab:trainday01testday234_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 26m 9s & 0h 0m 1s & 0.8761 & 0.1239 & 0.5000 & 80 & 4 & 6 & 8 \\
+OneClassForestwoBootstrap & 0h 0m 13s & 0h 0m 2s & 0.9343 & 0.6408 & 0.7882 & 98 & 3 & 3 & 5 \\
+IsolationForest & 0h 2m 19s & 0h 1m 37s & 0.9890 & 0.9168 & 0.9736 & 11 & 7 & 9 & 13 \\
+NeuronalNetworkLoss & 0h 48m 11s & 0h 0m 10s & 0.8976 & 0.4997 & 0.7482 & 1 & 8 & 11 & 16 \\
+NeuronalNetwork & 0h 39m 41s & 0h 0m 1s & 0.6280 & 0.1569 & 0.2051 & 17 & 9 & 12 & 18 \\
+OneClassSVN & 0h 7m 3s & 0h 1m 30s & 0.9145 & 0.4623 & 0.5386 & 1 & 4 & 5 & 7 \\
+EnergyFlowClassifier & 0h 34m 41s & 0h 0m 41s & 0.8024 & 0.4841 & 0.6211 & 2 & 8 & 11 & 16 \\
+DistanceLOF & 0h 25m 12s & 1h 57m 2s & 0.9212 & 0.5006 & 0.7885 & 1 & 2 & 2 & 3 \\
+LocalOutlierFactor & 0h 22m 6s & 0h 40m 56s & 0.8599 & 0.3653 & 0.6780 & 30 & 5 & 6 & 10 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.7536 & 0.2481 & 0.5002 & 4 & 9 & 11 & 17 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_DDos, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_DDos}, flow samples: samples}
+\label{tab:trainday0ddos_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 24s & 0h 0m 0s & 0.6307 & 0.3692 & 0.5000 & 7 & 3 & 4 & 6 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.6434 & 0.8619 & 0.6655 & 120 & 1 & 2 & 2 \\
+IsolationForest & 0h 1m 13s & 0h 0m 3s & 0.9072 & 0.9735 & 0.9485 & 1 & 2 & 3 & 4 \\
+NeuronalNetworkLoss & 0h 25m 14s & 0h 0m 0s & 0.6791 & 0.8415 & 0.7566 & 27 & 2 & 3 & 4 \\
+NeuronalNetwork & - & - & - & - & - & - & - & - & - \\
+OneClassSVN & 0h 1m 34s & 0h 0m 5s & 0.8512 & 0.7522 & 0.6993 & 1 & 2 & 2 & 3 \\
+EnergyFlowClassifier & 0h 17m 51s & 0h 0m 1s & 0.4124 & 0.7227 & 0.5530 & 65 & 2 & 3 & 4 \\
+DistanceLOF & 0h 1m 49s & 0h 0m 28s & 0.3691 & 0.7109 & 0.5209 & 69 & 3 & 4 & 6 \\
+LocalOutlierFactor & 0h 6m 16s & 0h 2m 12s & 0.3230 & 0.7286 & 0.4943 & 2 & 2 & 2 & 4 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.2639 & 0.7375 & 0.4988 & 1 & 2 & 3 & 4 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_Dos, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_Dos}, flow samples: samples}
+\label{tab:trainday0dos_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.7657 & 0.2343 & 0.5000 & 47 & 8 & 10 & 15 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.6473 & 0.5097 & 0.5248 & 33 & 3 & 4 & 6 \\
+IsolationForest & 0h 1m 14s & 0h 0m 7s & 0.9533 & 0.9609 & 0.9614 & 1 & 4 & 5 & 7 \\
+NeuronalNetworkLoss & 0h 25m 16s & 0h 0m 1s & 0.7571 & 0.5932 & 0.6839 & 1 & 4 & 5 & 8 \\
+NeuronalNetwork & 0h 19m 30s & 0h 0m 0s & 0.7710 & 0.6252 & 0.5591 & 2 & 4 & 5 & 8 \\
+OneClassSVN & 0h 1m 34s & 0h 0m 10s & 0.8856 & 0.8342 & 0.8453 & 1 & 2 & 3 & 4 \\
+EnergyFlowClassifier & 0h 17m 48s & 0h 0m 3s & 0.5916 & 0.4658 & 0.5010 & 178 & 4 & 5 & 8 \\
+DistanceLOF & 0h 1m 48s & 0h 1m 37s & 0.7291 & 0.6859 & 0.7449 & 1 & 8 & 10 & 15 \\
+LocalOutlierFactor & 0h 6m 16s & 0h 4m 12s & 0.7273 & 0.5696 & 0.6484 & 203 & 3 & 4 & 5 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.5342 & 0.4690 & 0.5002 & 2 & 4 & 5 & 8 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_FTPPatator, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_FTPPatator}, flow samples: samples}
+\label{tab:trainday0ftppatator_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 19s & 0h 0m 0s & 0.9713 & 0.0287 & 0.5000 & 47 & 86 & 111 & 171 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9759 & 0.2117 & 0.6225 & 94 & 7 & 10 & 14 \\
+IsolationForest & 0h 1m 13s & 0h 0m 3s & 0.9220 & 0.0397 & 0.3468 & 3093 & 40 & 52 & 80 \\
+NeuronalNetworkLoss & 0h 25m 19s & 0h 0m 1s & 0.9661 & 0.0588 & 0.5649 & 892 & 38 & 50 & 76 \\
+NeuronalNetwork & 0h 19m 32s & 0h 0m 0s & 0.9713 & 0.0287 & 0.5000 & 14 & 39 & 51 & 78 \\
+OneClassSVN & 0h 1m 34s & 0h 0m 4s & 0.9750 & 0.1222 & 0.7129 & 95 & 32 & 41 & 63 \\
+EnergyFlowClassifier & 0h 17m 55s & 0h 0m 1s & 0.9806 & 0.2643 & 0.7996 & 3 & 38 & 49 & 75 \\
+DistanceLOF & 0h 1m 49s & 0h 0m 19s & 0.9352 & 0.0422 & 0.3600 & 43187 & 201 & 201 & 201 \\
+LocalOutlierFactor & 0h 6m 16s & 0h 1m 59s & 0.9624 & 0.0790 & 0.6318 & 7 & 28 & 37 & 56 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.9427 & 0.0579 & 0.5013 & 43 & 39 & 51 & 78 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_Heartbleed, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_Heartbleed}, flow samples: samples}
+\label{tab:trainday0heartbleed_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.9852 & 0.0147 & 0.4999 & 83 & 201 & 201 & 201 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9893 & 0.2557 & 0.6506 & 233 & 17 & 21 & 33 \\
+IsolationForest & 0h 1m 13s & 0h 0m 0s & 1.0000 & 0.9645 & 0.9976 & 1 & 55 & 72 & 110 \\
+NeuronalNetworkLoss & 0h 25m 19s & 0h 0m 0s & 0.9996 & 0.6302 & 0.9845 & 1 & 70 & 90 & 139 \\
+NeuronalNetwork & 0h 19m 55s & 0h 0m 0s & 0.9930 & 0.6606 & 0.7643 & 1 & 78 & 101 & 155 \\
+OneClassSVN & 0h 1m 34s & 0h 0m 0s & 0.9995 & 0.5227 & 0.9835 & 3 & 26 & 34 & 52 \\
+EnergyFlowClassifier & 0h 18m 4s & 0h 0m 0s & 0.9191 & 0.0156 & 0.1224 & 1998 & 81 & 105 & 161 \\
+DistanceLOF & 0h 1m 49s & 0h 0m 1s & 1.0000 & 0.0000 & 0.0000 & 1 & 1 & 1 & 1 \\
+LocalOutlierFactor & 0h 6m 15s & 0h 0m 17s & 0.9812 & 0.0297 & 0.5463 & 7791 & 201 & 201 & 201 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.9696 & 0.0296 & 0.5034 & 24 & 78 & 101 & 155 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_Infiltration, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_Infiltration}, flow samples: samples}
+\label{tab:trainday0infiltration_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.8908 & 0.3594 & 0.5583 & 4 & 4 & 5 & 7 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9771 & 0.6627 & 0.9161 & 2 & 3 & 4 & 5 \\
+IsolationForest & 0h 1m 13s & 0h 0m 3s & 0.9916 & 0.8840 & 0.9749 & 1 & 8 & 10 & 15 \\
+NeuronalNetworkLoss & 0h 25m 24s & 0h 0m 0s & 0.8231 & 0.2378 & 0.5279 & 1 & 9 & 12 & 18 \\
+NeuronalNetwork & 0h 19m 39s & 0h 0m 0s & 0.8523 & 0.2118 & 0.4845 & 2 & 9 & 12 & 18 \\
+OneClassSVN & 0h 1m 34s & 0h 0m 4s & 0.9620 & 0.6829 & 0.8887 & 163 & 6 & 8 & 12 \\
+EnergyFlowClassifier & 0h 18m 0s & 0h 0m 1s & 0.9708 & 0.7304 & 0.9134 & 1 & 9 & 12 & 17 \\
+DistanceLOF & 0h 1m 49s & 0h 0m 24s & 0.8388 & 0.3011 & 0.6089 & 1 & 3 & 4 & 6 \\
+LocalOutlierFactor & 0h 6m 16s & 0h 2m 0s & 0.8581 & 0.2996 & 0.6515 & 47 & 7 & 9 & 14 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.7714 & 0.2317 & 0.5009 & 8 & 9 & 12 & 18 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_PortScan, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_PortScan}, flow samples: samples}
+\label{tab:trainday0portscan_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 20s & 0h 0m 0s & 0.7084 & 0.6249 & 0.5000 & 1 & 3 & 4 & 6 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9693 & 0.9511 & 0.9639 & 1 & 1 & 2 & 2 \\
+IsolationForest & 0h 1m 14s & 0h 0m 2s & 0.9911 & 0.9759 & 0.9893 & 7 & 3 & 3 & 5 \\
+NeuronalNetworkLoss & 0h 25m 23s & 0h 0m 1s & 0.6625 & 0.5471 & 0.5524 & 1459 & 3 & 4 & 6 \\
+NeuronalNetwork & 0h 19m 38s & 0h 0m 0s & 0.7084 & 0.2915 & 0.5000 & 1105 & 3 & 4 & 6 \\
+OneClassSVN & 0h 1m 34s & 0h 0m 4s & 0.8224 & 0.8472 & 0.8521 & 1 & 2 & 3 & 4 \\
+EnergyFlowClassifier & 0h 17m 56s & 0h 0m 1s & 0.9424 & 0.9485 & 0.9505 & 5 & 3 & 4 & 6 \\
+DistanceLOF & 0h 1m 49s & 0h 0m 22s & 0.4963 & 0.6102 & 0.5436 & 1 & 2 & 2 & 3 \\
+LocalOutlierFactor & 0h 6m 14s & 0h 1m 52s & 0.5719 & 0.6019 & 0.6081 & 750 & 5 & 6 & 9 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.4198 & 0.5837 & 0.4999 & 1 & 3 & 4 & 6 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_SSHPatator, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_SSHPatator}, flow samples: samples}
+\label{tab:trainday0sshpatator_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 22s & 0h 0m 0s & 0.9574 & 0.0426 & 0.5000 & 8220 & 52 & 68 & 104 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9571 & 0.0428 & 0.5022 & 73 & 43 & 56 & 86 \\
+IsolationForest & 0h 1m 13s & 0h 0m 2s & 0.8305 & 0.0496 & 0.2024 & 1986 & 27 & 35 & 54 \\
+NeuronalNetworkLoss & 0h 25m 22s & 0h 0m 0s & 0.9388 & 0.0764 & 0.4965 & 7862 & 26 & 34 & 51 \\
+NeuronalNetwork & 0h 19m 38s & 0h 0m 0s & 0.9361 & 0.0798 & 0.4947 & 8214 & 26 & 34 & 52 \\
+OneClassSVN & 0h 1m 35s & 0h 0m 4s & 0.9443 & 0.1092 & 0.6040 & 1668 & 24 & 30 & 47 \\
+EnergyFlowClassifier & 0h 17m 52s & 0h 0m 1s & 0.9653 & 0.1266 & 0.6985 & 108 & 26 & 34 & 51 \\
+DistanceLOF & 0h 1m 48s & 0h 0m 17s & 0.9265 & 0.0692 & 0.4163 & 76212 & 201 & 201 & 201 \\
+LocalOutlierFactor & 0h 6m 14s & 0h 1m 49s & 0.9300 & 0.0809 & 0.5222 & 452 & 53 & 69 & 106 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.9152 & 0.0848 & 0.5001 & 1 & 26 & 34 & 52 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_TestBotnet, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_TestBotnet}, flow samples: samples}
+\label{tab:trainday0testbotnet_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 24s & 0h 0m 0s & 0.9969 & 0.0031 & 0.5000 & 343 & 201 & 201 & 201 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9967 & 0.0075 & 0.5190 & 22 & 201 & 201 & 201 \\
+IsolationForest & 0h 1m 14s & 0h 0m 2s & 0.9984 & 0.0906 & 0.8135 & 1 & 201 & 201 & 201 \\
+NeuronalNetworkLoss & 0h 25m 25s & 0h 0m 0s & 0.9964 & 0.0075 & 0.6013 & 2 & 201 & 201 & 201 \\
+NeuronalNetwork & 0h 19m 34s & 0h 0m 0s & 0.9969 & 0.0031 & 0.5000 & 332 & 201 & 201 & 201 \\
+OneClassSVN & 0h 1m 34s & 0h 0m 4s & 0.9985 & 0.0364 & 0.8195 & 2 & 201 & 201 & 201 \\
+EnergyFlowClassifier & 0h 17m 54s & 0h 0m 1s & 0.9946 & 0.0133 & 0.6138 & 314 & 201 & 201 & 201 \\
+DistanceLOF & 0h 1m 48s & 0h 0m 17s & 0.9893 & 0.0037 & 0.2364 & 45791 & 201 & 201 & 201 \\
+LocalOutlierFactor & 0h 6m 15s & 0h 1m 46s & 0.9943 & 0.0061 & 0.5232 & 16 & 201 & 201 & 201 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.9932 & 0.0061 & 0.4904 & 8 & 201 & 201 & 201 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_TestDay1234, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_TestDay1234}, flow samples: samples}
+\label{tab:trainday0testday1234_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 20s & 0h 0m 0s & 0.8976 & 0.1024 & 0.5000 & 37 & 9 & 12 & 18 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 1s & 0.9312 & 0.4944 & 0.7388 & 388 & 4 & 4 & 7 \\
+IsolationForest & 0h 1m 13s & 0h 0m 47s & 0.9700 & 0.8806 & 0.9437 & 27 & 9 & 11 & 17 \\
+NeuronalNetworkLoss & 0h 24m 55s & 0h 0m 12s & 0.9127 & 0.4152 & 0.7261 & 1 & 10 & 13 & 20 \\
+NeuronalNetwork & 0h 20m 20s & 0h 0m 2s & 0.8926 & 0.2928 & 0.4779 & 1 & 2 & 3 & 4 \\
+OneClassSVN & 0h 1m 34s & 0h 1m 2s & 0.9668 & 0.7171 & 0.8277 & 1 & 4 & 6 & 8 \\
+EnergyFlowClassifier & 0h 17m 46s & 0h 0m 23s & 0.8442 & 0.4414 & 0.6217 & 1 & 10 & 13 & 20 \\
+DistanceLOF & 0h 1m 48s & 0h 41m 11s & 0.9351 & 0.4204 & 0.7808 & 1 & 2 & 2 & 3 \\
+LocalOutlierFactor & 0h 6m 11s & 0h 27m 2s & 0.9020 & 0.3118 & 0.6865 & 433 & 4 & 5 & 7 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.7957 & 0.2048 & 0.4992 & 2 & 11 & 14 & 21 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\section*{Results for dataset: TrainDay0_Web, samples}
+\begin{table}[h!]
+\centering
+\caption{Results for dataset \texttt{TrainDay0_Web}, flow samples: samples}
+\label{tab:trainday0web_samples}
+\begin{tabular}{lrrrrrrrrrr}
+\toprule
+Algorithm & Fit Time & Predict Time & AUPRIN & AUPROUT & AUROC & Indices Draw & >0.9 & >0.95 & >0.99 \\
+\midrule
+OneClassForest & 0h 12m 23s & 0h 0m 0s & 0.9774 & 0.0226 & 0.5000 & 10613 & 131 & 170 & 201 \\
+OneClassForestwoBootstrap & 0h 0m 6s & 0h 0m 0s & 0.9732 & 0.0450 & 0.5363 & 351 & 47 & 62 & 94 \\
+IsolationForest & 0h 1m 14s & 0h 0m 1s & 0.9846 & 0.0947 & 0.7503 & 71 & 48 & 63 & 96 \\
+NeuronalNetworkLoss & 0h 25m 25s & 0h 0m 0s & 0.9781 & 0.0649 & 0.6546 & 333 & 49 & 63 & 97 \\
+NeuronalNetwork & - & - & - & - & - & - & - & - & - \\
+OneClassSVN & 0h 1m 34s & 0h 0m 2s & 0.9711 & 0.0606 & 0.6126 & 46 & 44 & 57 & 88 \\
+EnergyFlowClassifier & 0h 17m 56s & 0h 0m 1s & 0.9578 & 0.0401 & 0.4848 & 1071 & 50 & 65 & 100 \\
+DistanceLOF & 0h 1m 49s & 0h 0m 8s & 0.9511 & 0.0417 & 0.4709 & 25834 & 201 & 201 & 201 \\
+LocalOutlierFactor & 0h 6m 17s & 0h 1m 10s & 0.9562 & 0.0421 & 0.4955 & 10 & 65 & 84 & 129 \\
+Random & 0h 0m 0s & 0h 0m 0s & 0.9539 & 0.0444 & 0.4961 & 44 & 51 & 66 & 101 \\
 \bottomrule
 \end{tabular}
 \end{table}
